# framework

./: .gitignore  Cargo.toml
eth2_network_libp2p/: Cargo.toml
eth2_network_libp2p/src/: lib.rs
helper_functions/helper_functions_2/: Cargo.toml
helper_functions/helper_functions_interface/: Cargo.toml
scripts/: ci
transition_functions/: Cargo.toml
transition_functions/src/: lib.rs  spec_test_utils.rs
transition_functions/src/blocks/: block_processing.rs
types/: Cargo.toml
types/src/: beacon_state.rs  lib.rs  primitives.rs  slot_epoch_macros.rs  types.rs
utils/bls/: Cargo.toml
utils/bls/src/: aggregate_signature.rs  fake_aggregate_signature.rs  fake_public_key.rs  fake_signature.rs  keypair.rs  lib.rs  macros.rs  public_key.rs  public_key_bytes.rs  secret_key.rs  signature.rs  signature_bytes.rs
utils/merkle_proof/: Cargo.toml
utils/merkle_proof/src/: lib.rs  main.rs
utils/mif_ssz/: Cargo.toml  ssz_specs.md
utils/mif_ssz/examples/: large_list.rs  large_list_of_structs.rs  struct_definition.rs
utils/mif_ssz/fuzz/fuzz_targets/: fuzz_target_address_decode.rs  fuzz_target_address_encode.rs  fuzz_target_bool_decode.rs  fuzz_target_bool_encode.rs  fuzz_target_hash256_decode.rs  fuzz_target_hash256_encode.rs  fuzz_target_u16_decode.rs  fuzz_target_u16_encode.rs  fuzz_target_u32_decode.rs  fuzz_target_u32_encode.rs  fuzz_target_u64_decode.rs  fuzz_target_u64_encode.rs  fuzz_target_u8_decode.rs  fuzz_target_u8_encode.rs  fuzz_target_usize_decode.rs  fuzz_target_usize_encode.rs  fuzz_target_vec_address_decode.rs  fuzz_target_vec_bool_decode.rs  fuzz_target_vec_decode.rs  fuzz_target_vec_encode.rs  fuzz_target_vec_u64_decode.rs
utils/mif_ssz/src/: decode.rs  encode.rs  lib.rs
utils/mif_ssz/src/decode/: impls.rs
utils/mif_ssz/src/encode/: impls.rs
utils/mif_ssz/tests/: round_trips.rs  tests.rs
utils/mif_ssz_derive/: Cargo.toml
utils/mif_ssz_derive/src/: impls.rs  lib.rs
utils/mif_ssz_types/: Cargo.toml
utils/mif_ssz_types/src/: bitfield.rs  fixed_vector.rs  lib.rs  tree_hash.rs  variable_list.rs
utils/mif_tree_hash/: Cargo.toml
utils/mif_tree_hash/src/: implementation.rs  impls.rs  lib.rs  merkleize.rs
utils/mif_tree_hash_derive/: Cargo.toml
utils/mif_tree_hash_derive/src/: impls.rs  lib.rs
utils/ssz_derive/src/: lib.rs
utils/ssz_new/: Cargo.toml
utils/ssz_new/src/: decode.rs  encode.rs  lib.rs  utils.rs
utils/ssz_new/src/types/: bitfield.rs  bitvector.rs  fixed_vector.rs  mod.rs  variable_list.rs
utils/ssz_new/tests/: tests.rs
utils/ssz_new_derive/: Cargo.toml
utils/ssz_new_derive/src/: lib.rs
utils/ssz_new_types/: Cargo.toml
utils/ssz_new_types/src/: lib.rs
utils/ssz_new_types/src/impls/: bitfield.rs  fixed_vector.rs  mod.rs  variable_list.rs
utils/tree_hash/src/: lib.rs
utils/tree_hash_derive/src/: lib.rs
