[workspace]
members = [
    'types',
    'utils/bls',
    'utils/eth2_hashing',
    'utils/serde_hex',
    'utils/mif_ssz',
    'utils/mif_ssz_derive',
    'utils/mif_ssz_types',
    'utils/tree_hash',
    'utils/tree_hash_derive',
]

[profile.release]
overflow-checks = true

[patch]
[patch.crates-io]
tree_hash = { path = "utils/tree_hash" }
tree_hash_derive = { path = "utils/tree_hash_derive" }
