[package]
name = 'types'
version = '0.1.0'
authors = ['Saulius Grigaitis <saulius@dist.lt>']
edition = '2018'

[dependencies]
bls = { path = '../utils/bls' }
ethereum-types = '0.6'
serde = { version = '1.0', features = ['derive']}
generic-array = { version = '0.13.2', features = ['serde'] }
typenum = '1.11.2'
mif_ssz = { path = "../utils/mif_ssz" }
mif_ssz_derive = { path = "../utils/mif_ssz_derive" }
mif_ssz_types = { path = "../utils/mif_ssz_types" }
tree_hash = '0.1'
tree_hash_derive = '0.2'
