[package]
name = "bls"
version = "0.1.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2018"

[dependencies]
milagro_bls = { git = "https://github.com/sigp/milagro_bls", tag = "v0.11.0" }
eth2_hashing = { path = "../eth2_hashing" }
hex = "0.3"
rand = "^0.5"
serde = "1.0"
serde_derive = "1.0"
serde_hex = { path = "../serde_hex" }
mif_ssz = { path = "../mif_ssz" }
mif_ssz_types = { path = "../mif_ssz_types" }
tree_hash = "0.1"

[features]
fake_crypto = []
