[package]
name = "merkle_proof"
version = "0.1.0"
authors = ["simonass <simonas.stipinas@programmatus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ethereum-types = "0.6"
eth2_hashing = { path = "../eth2_hashing" }
lazy_static = "1.3.0"
eth2_ssz_types = { path = "../ssz_types" }

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
