[package]
name = "mif_ssz_types"
version = "0.1.0"
authors = ["admin"]
edition = "2018"

[dependencies]
tree_hash = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_hex = { path = "../serde_hex" }
mif_ssz = { path = "../mif_ssz" }
typenum = "1.10"

[dev-dependencies]
serde_yaml = "0.8"
tree_hash_derive = "0.2"
