[package]
name = "mif_ssz_types"
version = "0.1.0"
authors = ["Faustas Butkus <faustas.butkus@gmail.com>"]
edition = "2018"

[lib]
name = "ssz_types"

[dependencies]
tree_hash = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_hex = { path = "../serde_hex" }
mif_ssz = { path = "../mif_ssz" }
typenum = "1.10"