[package]
name = "mif_tree_hash"
version = "0.1.0"
authors = ["Faustas Butkus <faustas.butkus@gmail.com>"]
edition = "2018"

[lib]
name = "tree_hash"

[dev-dependencies]
mif_tree_hash_derive = { path = "../mif_tree_hash_derive" }

[dependencies]
eth2_hashing = "0.1"
ethereum-types = "0.6"
lazy_static = "1.4"
