[package]
name = "ssz_new"
version = "0.1.0"
authors = ["Faustas <faustas.butkus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ssz"

[dependencies]
typenum = "1.10"
ssz_new_derive = { path = "../ssz_new_derive" }