[package]
name = "eth2_ssz"
version = "0.1.2"
authors = ["Faustas <faustas.butkus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ssz"

[dependencies]
typenum = "1.10"
ethereum-types = "0.8"
eth2_ssz_derive = { path = "../ssz_new_derive" }