[package]
name = "ssz_new_types"
version = "0.1.0"
authors = ["Faustas <faustas.butkus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ssz_types"

[dependencies]
tree_hash = "0.1"
tree_hash_derive = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_hex = { path = "../serde_hex" }
#ssz_new = { path = "../ssz_new" }
typenum = "1.10"

